--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/supabase": "^1.1.5",
     "@nuxtjs/tailwindcss": "^6.10.1",
     "nuxt": "^3.8.2",
     "prisma": "^5.7.1",
@@ -19,7 +20,6 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
-    "@supabase/supabase-js": "^2.39.1",
     "pinia": "^2.1.7"
   }
 }
