--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@nuxt/ui": "^2.12.0",
     "@pinia/nuxt": "^0.5.1",
     "@prisma/client": "^5.7.1",
     "pinia": "^2.1.7"
