--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/supabase": "^1.1.5",
     "@nuxtjs/tailwindcss": "^6.10.1",
     "@samk-dev/nuxt-vcalendar": "^1.0.2",
+    "@types/opencc-js": "^1.0.3",
     "nuxt": "^3.8.2",
     "nuxt-time": "^0.1.2",
     "prisma": "^5.7.1",
@@ -24,6 +25,7 @@
     "@nuxt/ui": "^2.12.0",
     "@pinia/nuxt": "^0.5.1",
     "@prisma/client": "^5.7.1",
+    "opencc-js": "^1.0.5",
     "pinia": "^2.1.7"
   }
 }
