[feature] add NuxtImage to optimize image

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@nuxt/image": "^1.6.0",
     "@nuxt/ui": "^2.14.2",
     "@pinia/nuxt": "^0.5.1",
     "@prisma/client": "^5.7.1",
