--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.864.0",
     "@nuxt/image": "^1.6.0",
     "@nuxt/ui": "^2.14.2",
     "@pinia/nuxt": "^0.5.1",
