feat: optimize build process by preventing duplicate test execution

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "yarn test && yarn build"
+  command = "yarn build"
   publish = "dist"
 
 [build.environment]
@@ -7,8 +7,8 @@
 
 # 確保生產環境的變量都有設置
 [context.production]
-  command = "yarn test && yarn build"
+  command = "yarn build"
 
 # 開發分支的設置
 [context.branch-deploy]
-  command = "yarn test && yarn build"
+  command = "yarn build"
