ci: setup GitHub Actions workflow for testing and deployment

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "preview": "nuxt build && nuxt preview",
     "postinstall": "nuxt prepare",
     "test": "vitest run",
-    "test:watch": "vitest",
-    "prebuild": "yarn test"
+    "test:watch": "vitest"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
