--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "browser-image-compression": "^2.0.2",
     "nuxt-swiper": "^1.2.2",
     "opencc-js": "^1.0.5",
-    "pinia": "^2.1.7"
+    "pinia": "^2.1.7",
+    "sharp": "^0.34.4"
   }
 }
